// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should redner ExpensesSummary correctly with 1 expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $23.50
  </h1>
</div>
`;

exports[`should redner ExpensesSummary correctly with multiple expenses 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $2,354,534,443.50
  </h1>
</div>
`;
